Fixed the <pre> tag styles on mobile.

--- a/static/scss/_content.scss
+++ b/static/scss/_content.scss
@@ -110,6 +110,10 @@ $max-width: 1000px;
     width: inherit;
 
     font-family: 'Ubuntu Mono';
+
+    @media screen and (max-width: 800px) {
+      margin: 0.5em 0.25em;
+    }
   }
 
   .article-content {
